<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_background"
        tools:context=".view.Login">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="203dp"
            android:layout_height="198dp"
            android:src="@drawable/nutritionapp_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            style="@style/edit_text"
            android:background="@drawable/edit_text"
            android:hint="@string/text_email"
            android:maxLength="30"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            />
        <EditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            style="@style/edit_text"
            android:background="@drawable/edit_text"
            android:hint="@string/text_password"
            android:maxLength="15"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            style="@style/button_login"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/register"
            style="@style/register"
            android:layout_width="184dp"
            android:layout_height="44dp"
            android:text="@string/text_cadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>
